# an-daghdha

./: .env  Cargo.toml  diesel.toml  users.json
bruno/an-daghdha/: Authentication.bru  Socket connection.bru  bruno.json
compose/: docker-compose.yml  jaeger-service.yml  podman-compose.yml
docs/: an-daghdha.html  an-daghdha.md  an-daghdha.org  internal-architecture.drawio  message-bus.md  message-bus.org
examples/: bus.rs  busv3.rs
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2025-08-15-103014_create_accounts/: down.sql  up.sql
migrations/2025-08-15-103018_create_account_sessions/: down.sql  up.sql
migrations/2025-08-15-103033_create_account_resources/: down.sql  up.sql
migrations/2025-08-15-103037_create_account_buildings/: down.sql  up.sql
migrations/2025-08-15-103042_create_blueprints/: down.sql  up.sql
migrations/2025-11-22-105246-0000_create_inventories/: up.sql
migrations/2025-11-22-105259-0000_create_accounts_x_inventories/: down.sql  up.sql
migrations/2025-11-22-115526-0000_add_initial_data/: down.sql  up.sql
migrations/2025-11-26-162426-0000_create_blueprints/: down.sql  up.sql
migrations/2025-11-26-162606-0000_create_inventories_x_buildings/: down.sql  up.sql
migrations/2025-11-26-162826-0000_create_resources/: up.sql
migrations/2025-11-26-162928-0000_create_inventories_x_resources/: down.sql  up.sql
migrations/2099-11-27-115526-0000_add_initial_data/: up.sql
src/: broker.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs  websocket.rs
src/actor/: auth.rs  inventory.rs  mod.rs  model.rs  ticker.rs
src/actor/inventory/: handler.rs  mod.rs
src/auth/: handler.rs  mod.rs  model.rs  token.rs
src/bus/: handlers.rs  mod.rs  model.rs
src/game/: model.rs
src/messaging/: broker.rs  handler.rs  mod.rs  model.rs
src/persistence/: inventory_repository.rs  mod.rs  user_repository.rs
src/websocket/: api.rs  model.rs
