[package]
name = "an-daghdha"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
diesel = { version = "2.2.12", features = ["postgres"] }
dotenvy = "0.15"
futures-channel = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
regex = "1.11.1"
rusty_paseto = "0.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
