[package]
name = "an-daghdha"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.100" }
chrono = { version = "0.4.42", features = ["serde"] }
diesel = { version = "2.3.2", features = ["postgres", "postgres_backend", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.10"
dotenvy = "0.15"
futures-channel = "0.3.31"
futures-util = "0.3.31"
lazy_static = "1.5.0"
regex = "1.12.2"
rusty_paseto = "0.8.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
axum = { version = "0.8.7", features = ["json", "ws"] }
axum-extra = { version = "0.12.2", features = ["typed-header"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures = "0.3.31"
